updates on ranking

--- a/templates/Default/index.html.twig
+++ b/templates/Default/index.html.twig
@@ -52,11 +52,11 @@
             <span class="text-muted text-size-small">{{ 'index.stats.reviews'|trans }}</span>
           </div>
           <div class="col-xs-3">
-            <p><i class="icon-podium icon-2x display-inline-block text-warning"></i></p>
+            <p><i class="icon-users2 icon-2x display-inline-block text-warning"></i></p>
             <h5 class="text-semibold no-margin">
-              <a href="{{ path('top_list') }}">{{ stats.nb_in_tops }}</a>
+              <a href="{{ path('user_list') }}">{{ stats.nb_users }}</a>
             </h5>
-            <span class="text-muted text-size-small">{{ 'index.stats.tops'|trans }}</span>
+            <span class="text-muted text-size-small">{{ 'index.stats.users'|trans }}</span>
           </div>
           <div class="col-xs-3">
             <p><i class="icon-camera icon-2x display-inline-block text-info"></i></p>
