--- a/templates/Coaster/show.html.twig
+++ b/templates/Coaster/show.html.twig
@@ -148,29 +148,44 @@
           {% if coaster.park.country %}
             <div class="list-group-item">
               <label class="control-label no-margin text-semibold">{{ 'coaster.infos.country'|trans }}:</label>
-              <div class="pull-right">{{ coaster.park.country.name|trans([], 'database') }}</div>
+              <div class="pull-right">
+                  <a href="{{ path('ranking_index', {'filters[country]': coaster.park.country.id}) }}">
+                  {{ coaster.park.country.name|trans([], 'database') }}</a>
+              </div>
             </div>
           {% endif %}
           <div class="list-group-item">
             <label class="control-label no-margin text-semibold">{{ 'coaster.infos.manufacturer'|trans }}:</label>
-            <div class="pull-right">{{ coaster.manufacturer.name|default('data.unknown'|trans([], 'database')) }}</div>
+            <div class="pull-right">
+                <a href="{{ path('ranking_index', {'filters[manufacturer]': coaster.manufacturer.id}) }}">
+                {{ coaster.manufacturer.name|default('data.unknown'|trans([], 'database')) }}</a>
+            </div>
           </div>
           {% if coaster.materialType %}
             <div class="list-group-item">
               <label class="control-label no-margin text-semibold">{{ 'coaster.infos.materialType'|trans }}:</label>
-              <div class="pull-right">{{ coaster.materialType.name }}</div>
+              <div class="pull-right">
+                  <a href="{{ path('ranking_index', {'filters[materialType]': coaster.materialType.id}) }}">
+                  {{ coaster.materialType.name }}</a>
+              </div>
             </div>
           {% endif %}
           {% if coaster.seatingType %}
             <div class="list-group-item">
               <label class="control-label no-margin text-semibold">{{ 'coaster.infos.seatingType'|trans }}:</label>
-              <div class="pull-right">{{ coaster.seatingType.name }}</div>
+              <div class="pull-right">
+                  <a href="{{ path('ranking_index', {'filters[seatingType]': coaster.seatingType.id}) }}">
+                  {{ coaster.seatingType.name }}</a>
+              </div>
             </div>
           {% endif %}
           {% if coaster.model %}
             <div class="list-group-item">
               <label class="control-label no-margin text-semibold">{{ 'coaster.infos.model'|trans }}:</label>
-              <div class="pull-right">{{ coaster.model.name }}</div>
+              <div class="pull-right">
+                  <a href="{{ path('ranking_index', {'filters[model]': coaster.model.id}) }}">
+                  {{ coaster.model.name }}</a>
+              </div>
             </div>
           {% endif %}
           {% if coaster.kiddie %}
@@ -197,7 +212,10 @@
           {% if coaster.openingDate %}
             <div class="list-group-item">
               <label class="control-label no-margin text-semibold">{{ 'coaster.infos.opening'|trans }}:</label>
-              <div class="pull-right">{{ helper.displayDate(coaster.openingDate) }}</div>
+              <div class="pull-right">
+                  <a href="{{ path('ranking_index', {'filters[openingDate]': coaster.openingDate|date('Y') }) }}">
+                  {{ helper.displayDate(coaster.openingDate) }}</a>
+              </div>
             </div>
           {% endif %}
           {% if coaster.closingDate %}
