--- a/templates/Top/show.html.twig
+++ b/templates/Top/show.html.twig
@@ -58,7 +58,12 @@
 
             <ul class="list-inline list-inline-separate text-muted mb-10">
               {% if coaster.manufacturer %}
-                <li>{{ coaster.manufacturer.name }}</li>
+                <li>
+                  <a class="text-muted" href="{{ path('ranking_index', {'filters[manufacturer]': coaster.manufacturer.id}) }}">
+                    {{ coaster.manufacturer.name }}
+                  </a>
+
+                </li>
               {% endif %}
               <li>
                 <a class="text-muted" href="{{ path('park_show', {'slug': coaster.park.slug}) }}">
