--- a/templates/Park/show.html.twig
+++ b/templates/Park/show.html.twig
@@ -1,4 +1,5 @@
 {% extends "base.html.twig" %}
+{% import "helper.html.twig" as helper %}
 
 {% set title = park.name %}
 {% set subTitle = park.country.name|trans([], 'database') %}
@@ -36,6 +37,103 @@
       <!-- /coaster location -->
     </div>
     <div class="col-sm-9">
+        <ul class="media-list content-group">
+          {% for coaster in park.coasters %}
+            <li class="media panel panel-body stack-media-on-mobile">
+              <div class="media-left">
+                <a href="{{ path('bdd_show_coaster', {'slug': coaster.slug}) }}">
+                  {% if coaster.mainImage is not null %}
+                    <img src="{{ coaster.mainImage.path | imagine_filter('coaster_ranking') }}"
+                         class="img-rounded"
+                         style="width:96px;"
+                         alt="{{ coaster.name }}">
+                  {% endif %}
+                </a>
+              </div>
+              <div class="media-body">
+                <h2 class="media-heading mb-10">
+                  <a style="color:#333;" href="{{ path('bdd_show_coaster', {'slug': coaster.slug}) }}">
+                      {{ coaster.name }}
+                  </a>
+                </h2>
+                  <ul class="list-inline list-inline-separate text-muted mb-5">
+                      {% if coaster.manufacturer %}
+                          <li>
+                              <a class="text-muted" href="{{ path('ranking_index', {'filters[manufacturer]': coaster.manufacturer.id}) }}">
+                                  {{ coaster.manufacturer.name }}
+                              </a>
+                          </li>
+                      {% endif %}
+                      {% if coaster.openingDate %}
+                          <li>
+                              {% if coaster.openingDate is not empty %}
+                                  {{ coaster.openingDate|date('Y') }}
+                              {% else %}
+                                  &nbsp;
+                              {% endif %}
+                          </li>
+                      {% endif %}
+                  </ul>
+                <ul class="list-inline list-inline-separate text-muted mb-5">
+                  <li>
+                          <i class="icon-arrow-up8 text-warning-600"></i>
+                          {% if coaster.height is not empty %}
+                              {{ coaster.height ~ ' m' }}
+                          {% else %}
+                              &nbsp;
+                          {% endif %}
+                  </li>
+                    <li>
+                        <i class="icon-rocket text-success-400"></i>
+                        {% if coaster.speed is not empty %}
+                            {{ coaster.speed ~ ' km/h' }}
+                        {% else %}
+                            &nbsp;
+                        {% endif %}
+                    </li>
+                    <li>
+                        <i class="icon-rulers text-blue"></i>
+                        {% if coaster.length is not empty %}
+                            {{ coaster.length ~ ' m' }}
+                        {% else %}
+                            &nbsp;
+                        {% endif %}
+                    </li>
+                    <li>
+                        <i class="icon-spinner11 text-danger-400"></i>
+                        &nbsp;{{ coaster.inversionsNumber|default('0') }}
+                    </li>
+                </ul>
+
+              </div>
+
+              <div class="media-right text-center">
+                <!--<h3 style="color: {\{ helper.ratingColor(coaster.score) }};" class="no-margin text-semibold text-nowrap">
+                  {{ coaster.score|number_format(1, ',') }}%
+                </h3>
+                <span class="text-muted mb-10 mt-10 text-nowrap">
+                {{ 'coaster_ranking.duel_number'|transchoice(coaster.validDuels) }}
+              </span>
+              -->
+                  {% if not coaster.isKiddie %}
+                    <h3 style="color: {{ helper.ratingColor(coaster.score) }};" class="no-margin text-semibold text-nowrap">
+                      #{{ coaster.rank }}
+                    </h3>
+                  {% else %}
+                    <i class="icon-puzzle2 icon-3x display-inline-block text-warning"></i>
+                  {% endif %}
+              </div>
+
+            </li>
+          {% else %}
+            <li class="media panel panel-body stack-media-on-mobile">
+              <h5>{{ 'coaster_ranking.no_results'|trans }}</h5>
+            </li>
+          {% endfor %}
+        </ul>
+    </div>
+
+      <!--<div class="col-sm-9">
       <div class="row">
         {% for coaster in park.coasters %}
           <div class="col-sm-4">
@@ -85,7 +183,7 @@
         {% endfor %}
       </div>
     </div>
-  </div>
+  </div>-->
 {% endblock %}
 
 {% block javascripts %}
