--- a/templates/Maps/index.html.twig
+++ b/templates/Maps/index.html.twig
@@ -34,8 +34,8 @@
 
     function initMap() {
       map = new google.maps.Map(document.getElementById('map'), {
-        zoom: 5,
-        center: {lat: 48.384098, lng: 7.970846},
+        zoom: {{ zoom }},
+        center: {lat: {{ lat }}, lng: {{ lng }}},
       });
 
       if (navigator.geolocation) {
@@ -46,6 +46,13 @@
       }
 
       setInterval(setMarkers(map, {{ markers|raw }}), 50);
+
+      if ("{{ parkId }}" !== "0") {
+        var found = gmarkers.find(function (element) {
+          return element.parkId === {{ parkId }};
+        });
+        google.maps.event.trigger(found, 'click');
+      }
     }
 
     function setMarkers(map, markers) {
