--- a/templates/Park/show.html.twig
+++ b/templates/Park/show.html.twig
@@ -43,22 +43,27 @@
         </div>
         <div class="panel panel-white">
             <div class="panel-heading">
-                <h6>
-                    {{ 'coaster.infos.closeParksTitle'|trans({'%parkName%': park.name}) }}
+                <h6 class="text-center">
+                    {{ 'coaster.infos.closeParksTitle'|trans({'%parkName%': park.name}) }}&nbsp;<a href="{{ path('map_index', {'parkslug': park.slug}) }}">
+                        <i class="icon-map text-grey-600" style="font-size:24px;"></i>
+                    </a>
                 </h6>
             </div>
-            <div class="content-group-sm media col-xs-offset-2">
-            <ul class="list-feed">
-                {% for infoPark in closestParks %}
-                    <li>
-                        <a href="{{ path('park_show', {'slug': infoPark.slug}) }}">
-                            {{ infoPark.name }}
-                        </a>
-                        {{ ' - ' ~ infoPark.distance ~ ' km'}}
-                    </li>
-                {% endfor %}
-            </ul>
+            <div class="content-group-sm media row">
+                <div class="col-xs-6 col-xs-offset-3">
+                    <ul class="list-feed">
+                        {% for infoPark in closestParks %}
+                            <li class="">
+                                <a href="{{ path('park_show', {'slug': infoPark.slug}) }}">
+                                    {{ infoPark.name }}
+                                </a>
+                                {{ ' - ' ~ infoPark.distance ~ ' km'}}
+                            </li>
+                        {% endfor %}
+                    </ul>
+                </div>
             </div>
+
         </div>
         <!-- /park stats -->
         <!-- coaster location -->
