--- a/templates/Maps/index.html.twig
+++ b/templates/Maps/index.html.twig
@@ -13,9 +13,10 @@
 {% endblock %}
 
 {% block wide_body %}
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.7.1/leaflet.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mapbox-gl/1.13.1/mapbox-gl.min.css" />
     <div id="map" style="height:94vh;"></div>
+    <link rel="stylesheet" href="{{ asset('js/plugins/leaflet/leaflet.css') }}" />
+    <link rel="stylesheet" href="{{ asset('js/plugins/leaflet/mapbox-gl.min.css') }}" />
+    <link rel="stylesheet" href="{{ asset('js/plugins/leaflet/leaflet-beautify-marker-icon.css') }}" />
 {% endblock %}
 
 {% block javascripts %}
@@ -29,9 +30,11 @@
       })
     });
   </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.7.1/leaflet.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/mapbox-gl/1.13.1/mapbox-gl.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/mapbox-gl-leaflet/0.0.15/leaflet-mapbox-gl.min.js"></script>
+  <script type="text/javascript" src="{{ asset('js/plugins/leaflet/leaflet.js') }}"></script>
+  <script type="text/javascript" src="{{ asset('js/plugins/leaflet/bounce.js') }}"></script>
+  <script type="text/javascript" src="{{ asset('js/plugins/leaflet/mapbox-gl.min.js') }}"></script>
+  <script type="text/javascript" src="{{ asset('js/plugins/leaflet/leaflet-mapbox-gl.min.js') }}"></script>
+  <script type="text/javascript" src="{{ asset('js/plugins/leaflet/leaflet-beautify-marker-icon.js') }}"></script>
   <script type="text/javascript">
     var map = null;
     var gmarkers = [];
@@ -53,15 +56,30 @@
 
       map.setView([park.getLatLng().lat, park.getLatLng().lng], 9);
       loadParkData(park);
+      {% else %}
+      if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(function(position) {
+          map.setView([position.coords.latitude, position.coords.longitude], 5);
+        });
+      }
       {% endif %}
-
     }
 
     function generateMarkers(map, markers) {
+      var options = {
+        icon: 'cw',
+        borderWidth: '3',
+        borderColor: '#5d87d5',// TODO à utiliser quand note de parc 'hsl(note * 1.2, 50%, 50%)'
+        backgroundColor: '#37474f'
+      };
 
       // Adds markers to the map.
       markers.forEach(function(park) {
-        var marker = L.marker([park['latitude'], park['longitude']]).addTo(map);
+        var marker = L.marker([park['latitude'], park['longitude']], {icon : L.BeautifyIcon.icon(options)}).setBouncingOptions({
+          bounceHeight : 3,
+          bounceSpeed  : 54,
+          exclusive    : true
+        }).addTo(map);
         marker.parkId = park['id'];
         marker.title = park['name'];
 
@@ -83,6 +101,7 @@
     function loadParkData(marker) {
       if(marker._popup == undefined) {
         marker.bindPopup('Loading...').openPopup();
+        marker.toggleBouncing();
 
         $.ajax({
           url: Routing.generate('map_coasters_ajax', {
@@ -92,8 +111,12 @@
           type: 'GET',
           data: $('form').serialize(),
         }).done(function(coasters) {
-          marker.bindPopup(coasters)
+          marker.bindPopup(coasters);
+          marker.toggleBouncing();
         });
+      }
+      else {
+        marker.bounce(1);
       }
     }
 
