update recaptcha to invisible

--- a/templates/Default/contact.html.twig
+++ b/templates/Default/contact.html.twig
@@ -6,20 +6,16 @@
 
 {% form_theme form 'bootstrap_3_layout.html.twig' %}
 
-{% block stylesheets %}
-  <script src='https://www.google.com/recaptcha/api.js'></script>
-{% endblock %}
-
 {% block body %}
   {{ form_errors(form) }}
-  {{ form_start(form) }}
+  {{ form_start(form, {'attr': {'class': 'recaptcha-form'}}) }}
   {{ form_row(form.name) }}
   {{ form_row(form.email) }}
   {{ form_row(form.message, {'attr': {'rows': '5'}}) }}
+  {{ form_widget(form.recaptcha) }}
   {{ form_rest(form) }}
-  <div class="g-recaptcha" data-sitekey="6LdTx34UAAAAAP41CdaFZoDO7ELffKrUuVQB3pdU"></div>
   <div class="text-right">
-    <button type="submit" class="btn btn-primary">
+    <button id="contact_btn" type="submit" class="btn btn-primary">
       {{ 'contact.send'|trans }}
       <i class="icon-arrow-right14 position-right"></i>
     </button>
