--- a/templates/Maps/userMap.html.twig
+++ b/templates/Maps/userMap.html.twig
@@ -10,6 +10,9 @@
 
 {% block wide_body %}
   <div id="map" style="height:94vh;"></div>
+  <link rel="stylesheet" href="{{ asset('js/plugins/leaflet/leaflet.css') }}" />
+  <link rel="stylesheet" href="{{ asset('js/plugins/leaflet/mapbox-gl.min.css') }}" />
+  <link rel="stylesheet" href="{{ asset('js/plugins/leaflet/leaflet-beautify-marker-icon.css') }}" />
 {% endblock %}
 
 {% block javascripts %}
@@ -23,64 +26,80 @@
       });
     });
   </script>
+  <script type="text/javascript" src="{{ asset('js/plugins/leaflet/leaflet.js') }}"></script>
+  <script type="text/javascript" src="{{ asset('js/plugins/leaflet/bounce.js') }}"></script>
+  <script type="text/javascript" src="{{ asset('js/plugins/leaflet/mapbox-gl.min.js') }}"></script>
+  <script type="text/javascript" src="{{ asset('js/plugins/leaflet/leaflet-mapbox-gl.min.js') }}"></script>
+  <script type="text/javascript" src="{{ asset('js/plugins/leaflet/leaflet-beautify-marker-icon.js') }}"></script>
   <script type="text/javascript">
+{#    TODO Refacto pour éviter le code en double avec la map globale #}
+    var map = null;
     var gmarkers = [];
-    var map;
 
     function initMap() {
-      map = new google.maps.Map(document.getElementById('map'), {
-        zoom: 5,
-        center: {lat: 48.384098, lng: 7.970846},
-      });
+      map = L.map('map').setView([48.384098, 7.970846], 5);
+      var gl = L.tileLayer('https://{s}.basemaps.cartocdn.com/rastertiles/voyager/{z}/{x}/{y}{r}.png', {
+        attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors &copy; <a href="https://carto.com/attributions">CARTO</a>',
+        maxZoom: 15,
+        minZoom : 3
+      }).addTo(map);
 
-      if (navigator.geolocation) {
-        navigator.geolocation.getCurrentPosition(function(position) {
-          initialLocation = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
-          map.setCenter(initialLocation);
-        });
-      }
-
-      setInterval(setMarkers(map, {{ markers|raw }}), 50);
+      generateMarkers(map, {{ markers|raw }});
     }
 
-    function setMarkers(map, markers) {
-      var infowindow = new google.maps.InfoWindow();
+    function generateMarkers(map, markers) {
+      var options = {
+        icon: 'cw',
+        borderWidth: '3',
+        borderColor: '#5d87d5',// TODO à utiliser quand note de parc 'hsl(note * 1.2, 50%, 50%)'
+        backgroundColor: '#37474f'
+      };
 
       // Adds markers to the map.
       markers.forEach(function(park) {
-        var marker = new google.maps.Marker({
-          position: {lat: park['latitude'], lng: park['longitude']},
-          map: map,
-          title: park['name'],
-          parkId: park['id'],
-        });
+        var marker = L.marker([park['latitude'], park['longitude']], {icon : L.BeautifyIcon.icon(options)}).setBouncingOptions({
+          bounceHeight : 3,
+          bounceSpeed  : 54,
+          exclusive    : true
+        }).addTo(map);
+        marker.parkId = park['id'];
+        marker.title = park['name'];
+
         gmarkers.push(marker);
-        marker.addListener('click', function() {
-          infowindow.setContent('Loading...');
-          infowindow.open(map, this);
 
-          $.ajax({
-            url: Routing.generate('map_coasters_ajax', {
-              'id': this.parkId,
-              '_locale': '{{ app.request.locale }}',
-            }),
-            type: 'GET',
-            data: $('form').serialize(),
-          }).done(function(coasters) {
-            infowindow.setContent(coasters);
-          });
+        marker.on('click', function() {
+          loadParkData(marker);
         });
-      });
-
-      google.maps.event.addListener(map, 'click', function() {
-        infowindow.close();
       });
     }
 
     function removeMarkers() {
       gmarkers.forEach(function(park) {
-        park.setMap(null);
+        map.removeLayer(park);
       });
+      gmarkers = [];
+    }
+
+    function loadParkData(marker) {
+      if(marker._popup == undefined) {
+        marker.bindPopup('Loading...').openPopup();
+        marker.toggleBouncing();
+
+        $.ajax({
+          url: Routing.generate('map_coasters_ajax', {
+            'id': marker.parkId,
+            '_locale': '{{ app.request.locale }}',
+          }),
+          type: 'GET',
+          data: $('form').serialize(),
+        }).done(function(coasters) {
+          marker.bindPopup(coasters);
+          marker.toggleBouncing();
+        });
+      }
+      else {
+        marker.bounce(1);
+      }
     }
 
     function filterData() {
@@ -90,11 +109,12 @@
         data: $('form').serialize(),
       }).done(function(data) {
         removeMarkers();
-        setMarkers(map, data);
+        generateMarkers(map, data);
       });
     }
-  </script>
-  <script async defer
-          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9GhjdRtYf1BNtxx-rLJJwNl2n2CDUev4&callback=initMap">
+
+    window.onload = function(){
+      initMap();
+    };
   </script>
 {% endblock %}
