--- a/templates/Park/show.html.twig
+++ b/templates/Park/show.html.twig
@@ -43,27 +43,25 @@
         </div>
         <div class="panel panel-white">
             <div class="panel-heading">
-                <h6 class="text-center">
-                    {{ 'coaster.infos.closeParksTitle'|trans({'%parkName%': park.name}) }}&nbsp;<a href="{{ path('map_index', {'parkslug': park.slug}) }}">
-                        <i class="icon-map text-grey-600" style="font-size:24px;"></i>
-                    </a>
+                <h6>
+                    {{ 'coaster.infos.closeParksTitle'|trans({'%parkName%': park.name}) }}<br>
                 </h6>
             </div>
-            <div class="content-group-sm media row">
-                <div class="col-xs-6 col-xs-offset-3">
-                    <ul class="list-feed">
-                        {% for infoPark in closestParks %}
-                            <li class="">
-                                <a href="{{ path('park_show', {'slug': infoPark.slug}) }}">
-                                    {{ infoPark.name }}
-                                </a>
-                                {{ ' - ' ~ infoPark.distance ~ ' km'}}
-                            </li>
-                        {% endfor %}
-                    </ul>
-                </div>
+            <div class="content-group-sm media">
+                <ul class="list-feed pl-15 pr-15">
+                    {% for infoPark in closestParks %}
+                        <li>
+                            <a href="{{ path('park_show', {'slug': infoPark.slug}) }}">
+                                {{ infoPark.name }}
+                            </a>
+                            {{ ' - ' ~ infoPark.distance ~ ' km'}}
+                        </li>
+                    {% endfor %}
+                </ul>
             </div>
-
+            <div class="border-top-grey text-center pt-10 pb-10">
+                <a href="{{ path('map_index', {'parkslug': park.slug}) }}">{{ 'coaster.infos.closeParksLink'|trans({'%parkName%': park.name}) }}</a>
+            </div>
         </div>
         <!-- /park stats -->
         <!-- coaster location -->
