--- a/templates/Top/show.html.twig
+++ b/templates/Top/show.html.twig
@@ -47,7 +47,7 @@
           <div class="media-left">
             <a href="{{ path('bdd_show_coaster', {'slug': coaster.slug}) }}">
               {% if coaster.mainImage is not null %}
-                <img src="{{ coaster.mainImage.path | imagine_filter('thumb_coaster') }}"
+                <img src="{{ pictures_cdn }}/280x210/{{ coaster.mainImage.filename }}"
                      class="img-rounded"
                      style="width:96px;"
                      alt="{{ coaster.name }}">
