display stats from previous ranking to current

--- a/templates/Ranking/index.html.twig
+++ b/templates/Ranking/index.html.twig
@@ -14,7 +14,7 @@
 {% endblock %}
 
 {% block body %}
-  {% include 'Ranking/info.html.twig' with {'ranking': ranking, 'nextRankingDate': nextRankingDate} only %}
+  {% include 'Ranking/info.html.twig' with {'ranking': ranking, 'previousRanking': previousRanking} only %}
   <div id="ranking-result"></div>
 {% endblock %}
 
