--- a/templates/Ranking/info.html.twig
+++ b/templates/Ranking/info.html.twig
@@ -2,7 +2,8 @@
   <div class="panel-heading has-visible-elements">
     <h6 class="panel-title">{{ 'coaster_ranking.info.title'|trans({'%rankingMonth%': ranking.computedAt|localizeddate('long', 'none')}) }}</h6>
     <div class="heading-elements visible-elements">
-      {% if nextRankingDate %}
+      {% set nextRankingDate = 'now'|date_modify('first day of next month midnight 1 minute') %}
+      {% if nextRankingDate|date('U') - 'now'|date('U') > 7200 %}
         <span class="heading-text text-muted">
           <i class="icon-history text-warning position-left"></i>
           {{ 'coaster_ranking.info.next'|trans({'%date%': nextRankingDate|ago}) }}
@@ -18,7 +19,10 @@
     <div class="col-xs-3">
       <div class="content-group">
         <h6 class="text-semibold no-margin">
-          <i class="icon-comments position-left text-slate"></i><br/>{{ ranking.rankedCoasterNumber }}&nbsp;
+          <i class="icon-comments position-left text-slate"></i><br/>{{ ranking.rankedCoasterNumber }}&nbsp
+          {% if ranking.rankedCoasterNumber - previousRanking.rankedCoasterNumber > 0 %}
+            <span class="badge bg-blue-400">+{{ ranking.rankedCoasterNumber - previousRanking.rankedCoasterNumber }}</span>
+          {% endif %}
         </h6>
         <span class="hidden-xs text-muted text-size-small">{{ 'coaster_ranking.info.coasters_ranked'|trans }}</span>
       </div>
@@ -27,6 +31,9 @@
       <div class="content-group">
         <h6 class="text-semibold no-margin">
           <i class="icon-stars position-left text-slate"></i><br/>{{ ranking.ratingNumber|shortNum }}
+          {% if ranking.ratingNumber - previousRanking.ratingNumber > 1000 %}
+            <span class="badge bg-blue-400">+{{ (ranking.ratingNumber - previousRanking.ratingNumber)|shortNum }}</span>
+          {% endif %}
         </h6>
         <span class="hidden-xs text-muted text-size-small">{{ 'coaster_ranking.info.ratings'|trans }}</span>
       </div>
@@ -34,7 +41,10 @@
     <div class="col-xs-3">
       <div class="content-group">
         <h6 class="text-semibold no-margin">
-          <i class="icon-users position-left text-slate"></i><br/>{{ ranking.userNumber }}
+          <i class="icon-users position-left text-slate"></i><br/>{{ ranking.userNumber }}&nbsp;
+          {% if ranking.userNumber - previousRanking.userNumber > 0 %}
+            <span class="badge bg-blue-400">+{{ ranking.userNumber - previousRanking.userNumber }}</span>
+          {% endif %}
         </h6>
         <span class="hidden-xs text-muted text-size-small">{{ 'coaster_ranking.info.users'|trans }}</span>
       </div>
