--- a/templates/Ranking/info.html.twig
+++ b/templates/Ranking/info.html.twig
@@ -24,7 +24,8 @@
             <span class="badge bg-blue-400">+{{ ranking.rankedCoasterNumber - previousRanking.rankedCoasterNumber }}</span>
           {% endif %}
         </h6>
-        <span class="hidden-xs text-muted text-size-small">{{ 'coaster_ranking.info.coasters_ranked'|trans }}</span>
+        <span class="visible-xs text-muted text-size-small">{{ 'coaster_ranking.info.coasters_ranked.short'|trans }}</span>
+        <span class="hidden-xs text-muted text-size-small">{{ 'coaster_ranking.info.coasters_ranked.long'|trans }}</span>
       </div>
     </div>
     <div class="col-xs-3">
@@ -35,7 +36,7 @@
             <span class="badge bg-blue-400">+{{ (ranking.ratingNumber - previousRanking.ratingNumber)|shortNum }}</span>
           {% endif %}
         </h6>
-        <span class="hidden-xs text-muted text-size-small">{{ 'coaster_ranking.info.ratings'|trans }}</span>
+        <span class="text-muted text-size-small">{{ 'coaster_ranking.info.ratings'|trans }}</span>
       </div>
     </div>
     <div class="col-xs-3">
@@ -46,15 +47,19 @@
             <span class="badge bg-blue-400">+{{ ranking.userNumber - previousRanking.userNumber }}</span>
           {% endif %}
         </h6>
-        <span class="hidden-xs text-muted text-size-small">{{ 'coaster_ranking.info.users'|trans }}</span>
+        <span class="text-muted text-size-small">{{ 'coaster_ranking.info.users'|trans }}</span>
       </div>
     </div>
     <div class="col-xs-3">
       <div class="content-group">
         <h6 class="text-semibold no-margin">
-          <i class="icon-git-compare position-left text-slate"></i><br/>{{ ranking.comparisonNumber|shortNum }}
+          <i class="icon-git-compare position-left text-slate"></i><br/>{{ ranking.comparisonNumber|shortNum }}&nbsp;
+          {% if ranking.ratingNumber - previousRanking.ratingNumber > 1000 %}
+            <span class="badge bg-blue-400">+{{ (ranking.ratingNumber - previousRanking.ratingNumber)|shortNum }}</span>
+          {% endif %}
         </h6>
-        <span class="hidden-xs text-muted text-size-small">{{ 'coaster_ranking.info.comparisons'|trans }}</span>
+        <span class="visible-xs text-muted text-size-small">{{ 'coaster_ranking.info.comparisons.short'|trans }}</span>
+        <span class="hidden-xs text-muted text-size-small">{{ 'coaster_ranking.info.comparisons.long'|trans }}</span>
       </div>
     </div>
   </div>
