--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -98,14 +98,14 @@
 </script>
 {% block javascripts %}{% endblock %}
 {% if app.environment != 'dev' %}
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-37300594-3"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-M2S96P7YEW"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-  gtag('config', 'UA-37300594-3');
+    gtag('config', 'G-M2S96P7YEW');
 </script>
 {% endif %}
 </body>
