--- a/templates/bundles/TwigBundle/Exception/error403.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error403.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <div class="text-center content-group">
-        <h1 class="error-title">403</h1>
+        <h1 class="error-title">Oops</h1>
         <h3>{{ 'error.403.message'|trans }}</h3>
     </div>
 {% endblock %}
