--- a/templates/bundles/TwigBundle/Exception/error404.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error404.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 <div class="text-center content-group">
-    <h1 class="error-title">404</h1>
+    <h1 class="error-title">Oops</h1>
     <h3>{{ 'error.404.message'|trans }}</h3>
 </div>
 {% endblock %}
